Remove any unnecessary source files

--- a/Core/TDLTest/TDLTest.vcxproj
+++ b/Core/TDLTest/TDLTest.vcxproj
@@ -153,154 +153,49 @@ copy unicode_debug\TDLTest.exe ..\todolist\unicode_debug /y
     <ClCompile Include="..\Interfaces\ContentCtrl.cpp" />
     <ClCompile Include="..\Interfaces\ContentMgr.cpp" />
     <ClCompile Include="..\Interfaces\ContentTypeCombobox.cpp" />
-    <ClCompile Include="..\Interfaces\ImportExportComboBox.cpp" />
-    <ClCompile Include="..\Interfaces\ImportExportMgr.cpp" />
-    <ClCompile Include="..\Interfaces\ImportExportUIHelper.cpp" />
     <ClCompile Include="..\Interfaces\Preferences.cpp" />
     <ClCompile Include="..\Interfaces\RichEditSpellCheck.cpp" />
     <ClCompile Include="..\Interfaces\SpellCheckDlg.cpp" />
-    <ClCompile Include="..\Interfaces\TasklistStorageMgr.cpp" />
-    <ClCompile Include="..\Interfaces\UIExtensionHelper.cpp" />
-    <ClCompile Include="..\Interfaces\UIExtensionMgr.cpp" />
     <ClCompile Include="..\Interfaces\UIThemeFile.cpp" />
-    <ClCompile Include="..\ToDoList\FilteredToDoCtrl.cpp" />
-    <ClCompile Include="..\ToDoList\MultiTaskFile.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesDlg.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesExportPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesFile2Page.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesFilePage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesGenPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesMultiUserPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesShortcutsPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesTaskCalcPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesTaskDef2Page.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesTaskDefPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesTaskPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesToolPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesUICustomToolbarPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesUIPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesUITasklistColorsPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesUITasklistPage.cpp" />
-    <ClCompile Include="..\ToDoList\PreferencesUIVisibilityPage.cpp" />
-    <ClCompile Include="..\ToDoList\TabbedToDoCtrl.cpp" />
     <ClCompile Include="..\ToDoList\TaskClipboard.cpp" />
     <ClCompile Include="..\ToDoList\TaskFile.cpp" />
-    <ClCompile Include="..\ToDoList\TaskListCsvExporter.cpp" />
-    <ClCompile Include="..\ToDoList\TaskListCsvImporter.cpp" />
     <ClCompile Include="..\ToDoList\TaskListDropTarget.cpp" />
-    <ClCompile Include="..\ToDoList\TaskListExporterBase.cpp" />
-    <ClCompile Include="..\ToDoList\TaskListHtmlExporter.cpp" />
-    <ClCompile Include="..\ToDoList\TaskListOutlookImporter.cpp" />
-    <ClCompile Include="..\ToDoList\TaskListTdlExporter.cpp" />
-    <ClCompile Include="..\ToDoList\TaskListTdlImporter.cpp" />
-    <ClCompile Include="..\ToDoList\TaskListTxtExporter.cpp" />
-    <ClCompile Include="..\ToDoList\TaskSelectionDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDCAnonymizeTasklist.cpp" />
     <ClCompile Include="..\ToDoList\TDCCustomAttribData.cpp" />
     <ClCompile Include="..\ToDoList\TDCCustomAttributeDef.cpp" />
     <ClCompile Include="..\ToDoList\TDCCustomAttributeUIHelper.cpp" />
     <ClCompile Include="..\ToDoList\TDCDialogHelper.cpp" />
     <ClCompile Include="..\ToDoList\TDCEnumContainers.cpp" />
-    <ClCompile Include="..\ToDoList\TDCFilter.cpp" />
     <ClCompile Include="..\ToDoList\TDCFindReplace.cpp" />
     <ClCompile Include="..\ToDoList\TDCImageList.cpp" />
-    <ClCompile Include="..\ToDoList\TDCImportExportMgr.cpp" />
-    <ClCompile Include="..\ToDoList\TDCMainMenu.cpp" />
     <ClCompile Include="..\ToDoList\TDCMergeTasklist.cpp" />
     <ClCompile Include="..\ToDoList\TDCOutlookImportHelper.cpp" />
     <ClCompile Include="..\ToDoList\TdcRecurrence.cpp" />
-    <ClCompile Include="..\ToDoList\tdcreminder.cpp" />
-    <ClCompile Include="..\ToDoList\TDCSearchParamHelper.cpp" />
     <ClCompile Include="..\ToDoList\TDCSimpleTextContent.cpp" />
     <ClCompile Include="..\ToDoList\TDCSourceControl.cpp" />
-    <ClCompile Include="..\ToDoList\TDCStartupOptions.cpp" />
     <ClCompile Include="..\ToDoList\TDCTaskTimeLog.cpp" />
-    <ClCompile Include="..\ToDoList\TDCTaskTimeLogAnalysis.cpp" />
     <ClCompile Include="..\ToDoList\TDCTimeTracking.cpp" />
-    <ClCompile Include="..\ToDoList\TDCToDoCtrlPreferenceHelper.cpp" />
-    <ClCompile Include="..\ToDoList\TDCToolsCmdlineParser.cpp" />
-    <ClCompile Include="..\ToDoList\TDCToolsHelper.cpp" />
-    <ClCompile Include="..\ToDoList\TDCWebUpdateScript.cpp" />
-    <ClCompile Include="..\ToDoList\TDLAboutDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLAddLoggedTimeDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLAnalyseLoggedTimeDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLAttribListBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLCleanupIniPreferencesDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLCmdlineOptionsDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLColumnAttribVisibilityListCtrl.cpp" />
-    <ClCompile Include="..\ToDoList\TDLColumnListBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLColumnSelectionDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLCommentsCtrl.cpp" />
     <ClCompile Include="..\ToDoList\TDLContentMgr.cpp" />
-    <ClCompile Include="..\ToDoList\TDLCsvImportExportDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLCustomAttribFeatureComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLCustomAttributeDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLCustomToolbar.cpp" />
     <ClCompile Include="..\ToDoList\TDLDialog.cpp" />
-    <ClCompile Include="..\ToDoList\TDLExportDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLFileEncodingComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLFilterBar.cpp" />
-    <ClCompile Include="..\ToDoList\TDLFilterComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLFilterDateComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLFilterDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLFilterOptionComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\tdlfindresultslistctrl.cpp" />
-    <ClCompile Include="..\ToDoList\tdlfindtaskattributecombobox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLFindTaskExpressionListCtrl.cpp" />
-    <ClCompile Include="..\ToDoList\TDLFindTasksDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLGoToTaskDlg.cpp" />
     <ClCompile Include="..\ToDoList\tdliconcombobox.cpp" />
     <ClCompile Include="..\ToDoList\TDLImpExpAttributeMappingListCtrl.cpp" />
-    <ClCompile Include="..\ToDoList\TDLImportDialog.cpp" />
-    <ClCompile Include="..\ToDoList\TDLImportOutlookDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLImportOutlookObjectsDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLImportOutlookObjectSetupListCtrl.cpp" />
     <ClCompile Include="..\ToDoList\TDLInfoTipCtrl.cpp" />
-    <ClCompile Include="..\ToDoList\TDLKeyboardShortcutDisplayDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLLanguageComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLLanguageDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLMultiSortDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLOffsetDatesDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLOleMessageFilter.cpp" />
-    <ClCompile Include="..\ToDoList\TDLPrefMigrationDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLPrintDialog.cpp" />
     <ClCompile Include="..\ToDoList\TDLPriorityComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLQuickFindComboBox.cpp" />
     <ClCompile Include="..\ToDoList\TDLRecurringTaskEdit.cpp" />
-    <ClCompile Include="..\ToDoList\TDLRegularityComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLReminderPeriodComboBox.cpp" />
     <ClCompile Include="..\ToDoList\TDLReuseRecurringTaskDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLRiskComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLSendTasksDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLSetReminderDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLShowReminderDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLStylesheetParamConfigDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLTaskCtrlBase.cpp" />
     <ClCompile Include="..\ToDoList\TDLTaskIconDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLTaskListCtrl.cpp" />
-    <ClCompile Include="..\ToDoList\TDLTasklistImportDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLTasklistSaveAsDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLTasklistStorageMgr.cpp" />
     <ClCompile Include="..\ToDoList\TDLTaskTreeCtrl.cpp" />
-    <ClCompile Include="..\ToDoList\TDLTaskViewListBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLThemeComboBox.cpp" />
-    <ClCompile Include="..\ToDoList\TDLThreadedExporterWnd.cpp" />
-    <ClCompile Include="..\ToDoList\TDLTimeTrackerDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLToolbarButtonListCtrl.cpp" />
-    <ClCompile Include="..\ToDoList\TDLToolsUserInputDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLTransformDialog.cpp" />
-    <ClCompile Include="..\ToDoList\TDLViewTabControl.cpp" />
-    <ClCompile Include="..\ToDoList\TDLWebUpdatePromptDlg.cpp" />
-    <ClCompile Include="..\ToDoList\TDLWelcomeWizard.cpp" />
     <ClCompile Include="..\ToDoList\ToDoCtrl.cpp" />
     <ClCompile Include="..\ToDoList\ToDoCtrlData.cpp" />
     <ClCompile Include="..\ToDoList\ToDoCtrlDataUtils.cpp" />
     <ClCompile Include="..\ToDoList\ToDoCtrlFind.cpp" />
-    <ClCompile Include="..\ToDoList\ToDoCtrlMgr.cpp" />
-    <ClCompile Include="..\ToDoList\ToDoCtrlReminders.cpp" />
     <ClCompile Include="..\ToDoList\ToDoCtrlUndo.cpp" />
     <ClCompile Include="..\ToDoList\ToDoitem.cpp" />
-    <ClCompile Include="..\ToDoList\ToDoListWnd.cpp" />
     <ClCompile Include="DateHelperTest.cpp" />
     <ClCompile Include="FileMiscTest.cpp" />
     <ClCompile Include="ImportExportMgrTest.cpp">
@@ -341,6 +236,7 @@ copy unicode_debug\TDLTest.exe ..\todolist\unicode_debug /y
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ToDoList\TdcRecurrence.h" />
+    <ClInclude Include="..\ToDoList\tdcstruct.h" />
     <ClInclude Include="DateHelperTest.h" />
     <ClInclude Include="FileMiscTest.h" />
     <ClInclude Include="ImportExportMgrTest.h" />
