Initial refactor to replace CSysImageList with CFileIcons (incomplete)

--- a/Core/Shared/Shared.vcxproj
+++ b/Core/Shared/Shared.vcxproj
@@ -274,6 +274,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="FileIcons.cpp" />
     <ClCompile Include="FileMisc.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -705,6 +706,7 @@
     <ClInclude Include="entoolbar.h" />
     <ClInclude Include="FileComboBox.h" />
     <ClInclude Include="fileedit.h" />
+    <ClInclude Include="FileIcons.h" />
     <ClInclude Include="FILEMISC.H" />
     <ClInclude Include="FileRegister.h" />
     <ClInclude Include="FindReplace.h" />
