--- a/Plugins/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
+++ b/Plugins/ContentControl/HTMLContentControl/HTMLContentControlCore/HTMLContentControlCore.csproj
@@ -89,6 +89,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\3rdParty\CommandHandling\CommandHandling.csproj">
+      <Project>{3733d8e0-4b87-42a6-9b9d-5e16bb15c8d8}</Project>
+      <Name>CommandHandling</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\3rdParty\MSHtmlEditorControl\MSHTMLEditorControl.csproj">
       <Project>{5873DE0F-6853-4C8E-91A4-7A6861069A9A}</Project>
       <Name>MSHTMLEditorControl</Name>
@@ -96,10 +100,6 @@
     <ProjectReference Include="..\..\..\3rdParty\WebBrowserEx\WebBrowserEx.csproj">
       <Project>{21776543-c563-42fe-8884-0eb3938477fb}</Project>
       <Name>WebBrowserEx</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\CommandHandling\CommandHandling.csproj">
-      <Project>{3733d8e0-4b87-42a6-9b9d-5e16bb15c8d8}</Project>
-      <Name>CommandHandling</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
