--- a/Plugins/PluginHelpers/PluginHelpers.vcxproj
+++ b/Plugins/PluginHelpers/PluginHelpers.vcxproj
@@ -183,11 +183,11 @@ copy $(SolutionDir)$(ConfigurationName)\Microsoft.VisualStudio.OLE.Interop.dll "
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\3rdParty\CommandHandling\CommandHandling.csproj">
+      <Project>{3733d8e0-4b87-42a6-9b9d-5e16bb15c8d8}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\3rdParty\MSHtmlEditorControl\MSHTMLEditorControl.csproj">
       <Project>{5873de0f-6853-4c8e-91a4-7a6861069a9a}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\CommandHandling\CommandHandling.csproj">
-      <Project>{3733d8e0-4b87-42a6-9b9d-5e16bb15c8d8}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
