Hide graph colour editor

--- a/Core/BurndownExt/BurndownExt.rc
+++ b/Core/BurndownExt/BurndownExt.rc
@@ -158,18 +158,19 @@ BEGIN
                     WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 196
+IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 145
 STYLE WS_CHILD
 FONT 8, "Tahoma"
 BEGIN
     CONTROL         "List1",IDC_GRAPHCOLORS,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_OWNERDRAWFIXED | 
-                    LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | 
-                    WS_TABSTOP,7,39,266,142
+                    LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | NOT WS_VISIBLE | 
+                    WS_DISABLED | WS_BORDER | WS_TABSTOP,7,39,266,68
     CONTROL         "'&Today' colour",IDC_TODAYCOLOR,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,8,114,10
     PUSHBUTTON      "S&et...   ",IDC_SETTODAYCOLOR,125,7,52,13,BS_RIGHT
-    LTEXT           "&Graph content colours",IDC_STATIC,7,27,223,8
+    LTEXT           "&Graph content colours",IDC_STATIC,7,27,223,8,NOT 
+                    WS_VISIBLE | WS_DISABLED
 END
 
 IDD_PREFERENCES_DIALOG DIALOG DISCARDABLE  0, 0, 373, 223
@@ -201,7 +202,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 340
         TOPMARGIN, 7
-        BOTTOMMARGIN, 189
+        BOTTOMMARGIN, 138
     END
 
     IDD_PREFERENCES_DIALOG, DIALOG
