--- a/Plugins/3rdParty/MSHtmlEditorControl/MSHTMLEditorControl.csproj
+++ b/Plugins/3rdParty/MSHtmlEditorControl/MSHTMLEditorControl.csproj
@@ -112,12 +112,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\ColorButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Classes\ColorButton.Designer.cs">
-      <DependentUpon>ColorButton.cs</DependentUpon>
-    </Compile>
     <Compile Include="Classes\HtmlTableProperty.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -295,6 +289,10 @@
     <ProjectReference Include="..\ToolStripEx\ToolStripEx.csproj">
       <Project>{8193b99d-4913-4574-ba3c-a7ef4e2b8627}</Project>
       <Name>ToolStripEx</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UIComponents\UIComponents.csproj">
+      <Project>{d2dd86f1-5957-463f-8673-49f045dcc8e9}</Project>
+      <Name>UIComponents</Name>
     </ProjectReference>
     <ProjectReference Include="..\WebBrowserEx\WebBrowserEx.csproj">
       <Project>{21776543-c563-42fe-8884-0eb3938477fb}</Project>
